# Mentoai_DE

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  MentoAI 발표자료(백지PPT).pptx  README.md  airflow.cfg  alembic.ini  pyproject.toml  requirements.txt  ~$MentoAI 발표자료(백지PPT).pptx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
dags/: mentoai_pipeline.py  producer_backfill_dag.py  producer_daily_dag.py
infra/: docker-compose.yml
infra/airflow/: Dockerfile  requirements.txt
infra/server/: Dockerfile  requirements.txt
infra/spark/: Dockerfile  requirements.txt
kafka/: README.md  consumer.py  debug_page.py  detail_debug.html  producer.py  producer_backfill.py  producer_daily.py  producer_debug.py  producer_recruit24_backfill.py  producer_recruit24_daily.py  producer_wanted.py  requirements.txt  test_crawl.py  test_detail_crawl.py  work24_debug.html
kafka/utils/: __init__.py  recruit24_parser.py  recruit24_scraper.py  scraper.py  wanted_scraper.py
server/alembic/: README  env.py
server/alembic/versions/: 20260208_0001_baseline.py
server/app/: main.py
server/app/api/: deps.py
server/app/api/routes/: health.py  v1.py  v2.py  v3.py  web.py
server/app/core/: config.py
server/app/db/: __init__.py  session.py
server/app/models/: __init__.py  user.py
server/app/repositories/: user_repository.py
server/app/schemas/: user.py  v1.py  v2.py  v3.py
server/app/services/: rag_service.py
server/app/templates/layout/: app_shell.html  base.html
server/app/templates/pages/home/: index.html
server/app/templates/pages/profile/: index.html
server/app/templates/pages/search/: index.html
spark/: README.md  check_env.py  job_ingest_bronze.py  job_process_silver.py  job_upsert_gold.py  spark_job.py  spark_main.py  verify_bronze.py  verify_s3.py
spark/utils/: __init__.py  config.py  readers.py  spark_session.py  text_cleaner.py  writers.py
tests/kafka/: test_backfill_topic.py  test_recruit24_parser.py
tests/server/: test_db_session.py  test_rag_service.py  test_server_import.py  test_web_ui_routes.py
tests/spark/: test_job_scripts.py  test_text_cleaner.py
