[project]
name = "mentoai-de"
version = "0.1.0"
description = "MentoAI data engineering and RAG backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
airflow = [
    "apache-airflow==2.8.1",
    "pendulum",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "kafka-python",
    "apache-airflow-providers-docker==3.14.1",
    "apache-airflow-providers-slack==8.9.2",
    "psycopg2-binary",
    "boto3",
    "qdrant-client>=1.9.0",
]
spark = [
    "python-dotenv",
    "kafka-python",
    "psycopg2-binary",
    "boto3",
    "qdrant-client>=1.9.0",
    "sentence-transformers",
    "torch",
    "pyspark",
]
server = [
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "sqlalchemy",
    "pydantic",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-google-genai>=2.0.0",
    "langchain-qdrant",
    "qdrant-client>=1.9.0",
    "langchain-huggingface",
    "sentence-transformers",
]
runtime = [
    { include-group = "airflow" },
    { include-group = "spark" },
    { include-group = "server" },
]
dev = [
    { include-group = "runtime" },
    "pytest",
    "ruff",
    "poethepoet",
    "ty>=0.0.15",
]

[tool.ruff]
extend-exclude = [".venv"]

[tool.poe.tasks]
lint = "ruff check --exclude .venv ."
lint_fix = "ruff check --exclude .venv --fix ."
format = "ruff format --exclude .venv ."
type = "ty check --exclude .venv ."

[tool.ty.src]
exclude = [".venv/**"]
